# tea22

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
exercise-001/: README.md  exercise-001  main.cpp
exercise-001/include/: config.h
exercise-002/: CMakeLists.txt  README.md  main.cpp
exercise-003/: CMakeLists.txt  README.md  main.cpp  module.cpp  module.h
exercise-004/: CMakeLists.txt  main.cpp  triangle.cpp  triangle.h
exercise-005/: CMakeLists.txt  README.md  jpg_to_header.py  main.cpp
exercise-006/: CMakeLists.txt  README.md  main.cpp
exercise-007/: CMakeLists.txt  README.md  main.cpp  statemachine.cpp  statemachine.h  switchcase.cpp
